# PaneLLM

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  main.py
app/api/: debates.py  health.py
app/core/: decorators.py  logging.py
app/providers/: anthropic.py  base.py  gemini.py  mock.py  openai.py  registry.py
app/storage/: db.py  orm.py  repositories.py
tests/: conftest.py  test_config.py  test_debates_stub.py  test_decorators.py  test_health.py  test_mock_provider.py  test_providers.py  test_storage.py
